[gd_scene load_steps=9 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://font/BrisaSans-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://font/new_dynamicfont2.tres" type="DynamicFont" id=4]
[ext_resource path="res://hint.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrecisionSlider" type="HSlider" parent="."]
margin_left = 209.0
margin_top = 38.0
margin_right = 952.0
margin_bottom = 85.0
min_value = 1.0
max_value = 1000.0
value = 1.0
exp_edit = true
allow_greater = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IterationsSlider" type="HSlider" parent="."]
margin_left = 213.0
margin_top = 132.0
margin_right = 957.0
margin_bottom = 162.0
min_value = 1.0
max_value = 50.0
value = 1.0

[node name="ShadowPrecisionSlider" type="HSlider" parent="."]
margin_left = 212.0
margin_top = 87.0
margin_right = 950.0
margin_bottom = 117.0
min_value = 1.0
max_value = 1000.0
value = 1.0
exp_edit = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
margin_left = 13.0
margin_top = 38.0
margin_right = 113.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 4 )
text = "Precision"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Node2D"]
margin_left = 6.0
margin_top = 86.0
margin_right = 198.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 4 )
text = "Shadow Precision"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Node2D"]
margin_left = 19.0
margin_top = 132.0
margin_right = 130.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 4 )
text = "Iterations"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D2" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prec" type="Label" parent="Node2D2"]
margin_left = 967.0
margin_top = 42.0
margin_right = 1012.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow_prec" type="Label" parent="Node2D2"]
margin_left = 972.0
margin_top = 86.0
margin_right = 1016.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iterations" type="Label" parent="Node2D2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 968.0
margin_top = 131.0
margin_right = 1009.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BSlider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 102.0
margin_top = -35.0
margin_right = 704.0
margin_bottom = -3.0
value = 80.0

[node name="GSlider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 103.0
margin_top = -72.0
margin_right = 705.0
margin_bottom = -40.0
value = 100.0

[node name="RSlider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 99.0
margin_top = -108.0
margin_right = 701.0
margin_bottom = -76.0
value = 30.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.451
anchor_right = 0.451
margin_left = -127.824
margin_top = 13.0
margin_right = 147.176
margin_bottom = 57.0
custom_fonts/font = ExtResource( 3 )
text = "Render settings"

[node name="Label8" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -205.0
margin_top = 162.0
margin_right = 70.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 3 )
text = "Cam Settings"

[node name="Label7" type="Label" parent="."]
margin_left = 13.0
margin_top = 190.0
margin_right = 288.0
margin_bottom = 234.0
custom_fonts/font = ExtResource( 3 )
text = "Light setting"

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -184.0
margin_right = 95.0
margin_bottom = -140.0
custom_fonts/font = ExtResource( 3 )
text = "Color Settings"

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.0
margin_right = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="Control"]
scale = Vector2( 2, 2 )

[node name="Darkening" type="CheckBox" parent="Control/Node2D"]
margin_left = 39.5
margin_top = -93.5
margin_right = 206.5
margin_bottom = -69.5
custom_fonts/font = SubResource( 1 )
pressed = true
text = "Use precedural darkening"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = -109.0
margin_right = 67.0
margin_bottom = -78.0
custom_fonts/font = ExtResource( 4 )
text = "Red"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 791.0
margin_top = -140.0
margin_right = 959.0
margin_bottom = -109.0
custom_fonts/font = SubResource( 2 )
text = "Precedural pow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -75.0
margin_right = 72.0
margin_bottom = -44.0
custom_fonts/font = ExtResource( 4 )
text = "Green"

[node name="Label9" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.0
margin_top = 206.0
margin_right = -74.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 4 )
text = "Speed"

[node name="Label10" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -157.0
margin_top = 265.0
margin_right = -42.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 4 )
text = "Sensisivity"

[node name="Label5" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -42.0
margin_right = 71.0
margin_bottom = -11.0
custom_fonts/font = ExtResource( 4 )
text = "Blue"

[node name="RPSlider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 833.0
margin_top = -99.0
margin_right = 910.0
margin_bottom = -83.0
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="GPSlider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 833.0
margin_top = -72.0
margin_right = 910.0
margin_bottom = -44.0
min_value = 1.0
max_value = 3.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BPSlider" type="HSlider" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 833.0
margin_top = -30.0
margin_right = 910.0
margin_bottom = -14.0
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="ColorInfo" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="ColorInfo"]
margin_left = 727.0
margin_top = -109.0
margin_right = 793.0
margin_bottom = -79.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorInfo"]
margin_left = 725.0
margin_top = -74.0
margin_right = 791.0
margin_bottom = -44.0
custom_fonts/font = ExtResource( 4 )

[node name="Label3" type="Label" parent="ColorInfo"]
margin_left = 726.0
margin_top = -42.0
margin_right = 792.0
margin_bottom = -12.0
custom_fonts/font = ExtResource( 4 )

[node name="LightControl" type="Control" parent="."]
margin_top = 319.0
margin_bottom = 319.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LNX" type="SpinBox" parent="LightControl"]
anchor_top = 0.447
anchor_bottom = 0.447
margin_left = 19.0
margin_top = -44.0
margin_right = 93.0
margin_bottom = -20.0
min_value = -10.0
max_value = 10.0
step = 0.1
value = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LNY" type="SpinBox" parent="LightControl"]
anchor_top = 0.447
anchor_bottom = 0.447
margin_left = 19.0
margin_top = -20.0
margin_right = 93.0
margin_bottom = 4.0
min_value = -10.0
max_value = 10.0
step = 0.1
value = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LNZ" type="SpinBox" parent="LightControl"]
anchor_top = 0.447
anchor_bottom = 0.447
margin_left = 19.0
margin_top = 4.0
margin_right = 93.0
margin_bottom = 28.0
min_value = -10.0
max_value = 10.0
step = 0.1
value = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AOS" type="SpinBox" parent="LightControl"]
anchor_top = 0.447
anchor_bottom = 0.447
margin_left = 151.0
margin_top = -44.0
margin_right = 225.0
margin_bottom = -20.0
min_value = -100.0
max_value = 1000.0
step = 0.1
value = 300.0
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ALS" type="SpinBox" parent="LightControl"]
anchor_top = 0.447
anchor_bottom = 0.447
margin_left = 151.0
margin_top = 4.0
margin_right = 225.0
margin_bottom = 28.0
max_value = 1.0
step = 0.01
value = 0.1
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LightControl"]
margin_left = 13.0
margin_top = -74.0
margin_right = 155.0
margin_bottom = -44.0
custom_fonts/font = SubResource( 3 )
text = "Light Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="LightControl"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 155.0
margin_top = -74.0
margin_right = 297.0
margin_bottom = -44.0
custom_fonts/font = SubResource( 3 )
text = "AO scale"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="LightControl"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 13.0
margin_top = 47.0
margin_right = 155.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "smoothness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="LightControl"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 123.0
margin_top = 47.0
margin_right = 265.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "specular strenght"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="LightControl"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 130.0
margin_top = -20.0
margin_right = 272.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "Ambient light"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SS" type="HSlider" parent="LightControl"]
margin_left = 13.0
margin_top = 67.0
margin_right = 90.0
margin_bottom = 83.0
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SSS" type="HSlider" parent="LightControl"]
margin_left = 143.0
margin_top = 67.0
margin_right = 220.0
margin_bottom = 83.0
max_value = 1.0
step = 0.01
value = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CSS" type="HSlider" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -205.0
margin_top = 237.0
margin_right = -13.0
margin_bottom = 253.0
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.1
exp_edit = true

[node name="CSNS" type="HSlider" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -205.0
margin_top = 299.0
margin_right = -13.0
margin_bottom = 315.0
max_value = 2.0
step = 0.001
value = 1.0

[node name="Label11" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -14.0

[node name="hint" parent="." instance=ExtResource( 5 )]
position = Vector2( 213, 161 )

[node name="Button" type="Button" parent="."]
margin_right = 113.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 4 )
text = "help"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
